cmake_minimum_required (VERSION 3.5)

SET(PRROJ_NAME cmake_test_boost)
PROJECT (${PRROJ_NAME})

SET(SOURCES "main.cpp")
ADD_EXECUTABLE(${PRROJ_NAME} ${SOURCES})

#find Boost

SET(NEED_BOOST_COMPONENTS thread date_time)
INCLUDE(${CMAKE_SOURCE_DIR}/cmake/Modules/getBoost.cmake)

IF(Boost_FOUND)
	ADD_DEFINITIONS(-DBOOST_ALL_NO_LIB)
	MESSAGE("Boost_FOUND & include_directories(${BOOST_INCLUDE_DIRS})")
	INCLUDE_DIRECTORIES(${BOOST_INCLUDE_DIRS})
	MESSAGE("target_link_libraries(${PRROJ_NAME} ${BOOST_LIBRARIES})")
	TARGET_LINK_LIBRARIES(${PRROJ_NAME} ${Boost_LIBRARIES})

ENDIF()

IF(UNIX)
	SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g")
	SET(CMAKE_C_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I/usr/local/include  -Wall")
	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -L/usr/local/lib")

ENDIF()
